// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sample trees (default): 1 1`] = `" (c = 0)"`;

exports[`sample trees (default): 2 1`] = `
"1,2 (c = 50)
.. (c = 0)
..1 (c = 20)
....0 (c = 10)
..2 (c = 30)
....0 (c = 10)
..0,2 (c = 40)
....0 (c = 10)
....0,0 (c = 20)
....0,1 (c = 30)
..1,0 (c = 30)
....0,1 (c = 30)
......0 (c = 10)
......0,0 (c = 20)
....0 (c = 10)
....0,0 (c = 20)
..1,1 (c = 40)
....0,1 (c = 30)
......0 (c = 10)"
`;

exports[`sample trees (default): 3 1`] = `" (c = 0)"`;

exports[`sample trees (default): 4 1`] = `
"1,3,0,1 (c = 90)
..0,1,1,3 (c = 90)
.... (c = 0)
....0,1 (c = 30)
......0 (c = 10)
......1 (c = 20)
......0,0 (c = 20)
....0,1,1 (c = 50)
......0 (c = 10)
......1 (c = 20)
......1,1 (c = 40)
........1,0 (c = 30)
..........0,0 (c = 20)
......0,0,1 (c = 40)
........0,0 (c = 20)
........0,0,0 (c = 30.000000000000004)
......0,1,0 (c = 40)
........0,0 (c = 20)
........1,0 (c = 30)
........0,0,0 (c = 30.000000000000004)
....0,3 (c = 50)
......0 (c = 10)
......3 (c = 40)
........1 (c = 20)
........2 (c = 30)
......0,0 (c = 20)
......0,2 (c = 40)
........2 (c = 30)
....1,1 (c = 40)
......1 (c = 20)
........0 (c = 10)
......1,0 (c = 30)
........0 (c = 10)
........0,0 (c = 20)
....1,3 (c = 60)
......1 (c = 20)
........0 (c = 10)
......3 (c = 40)
........0 (c = 10)
........2 (c = 30)
......1,0 (c = 30)
........0 (c = 10)
........0,0 (c = 20)
......1,2 (c = 50)
........2 (c = 30)
........0,2 (c = 40)
..........0 (c = 10)
....0,1,3 (c = 70)
......0 (c = 10)
......1 (c = 20)
......3 (c = 40)
........2 (c = 30)
......0,0,3 (c = 60.00000000000001)
........0,0 (c = 20)
........0,0,0 (c = 30.000000000000004)
........0,0,1 (c = 40)
........0,0,2 (c = 50)
..........2 (c = 30)
..........0,2 (c = 40)
......0,1,0 (c = 40)
........0,0,1 (c = 40)
..........0,0 (c = 20)
..........0,0,0 (c = 30.000000000000004)
........0,0 (c = 20)
........1,0 (c = 30)
........0,0,0 (c = 30.000000000000004)
......0,1,2 (c = 60)
........2 (c = 30)
........0,2 (c = 40)
........1,2 (c = 50)
........0,0,2 (c = 50)
..........0,0 (c = 20)
....1,1,3 (c = 80)
......1 (c = 20)
........0 (c = 10)
......3 (c = 40)
........0 (c = 10)
........2 (c = 30)
......1,0,3 (c = 70)
........0 (c = 10)
........1,0 (c = 30)
..........0,0 (c = 20)
........0,0,3 (c = 60.00000000000001)
..........0,0 (c = 20)
..........0,0,0 (c = 30.000000000000004)
..........0,0,1 (c = 40)
..........0,0,2 (c = 50)
............2 (c = 30)
............0,2 (c = 40)
........1,0,0 (c = 40)
..........0,0,1 (c = 40)
............0,0 (c = 20)
............0,0,0 (c = 30.000000000000004)
..........0,0 (c = 20)
..........0,0,0 (c = 30.000000000000004)
........1,0,1 (c = 50)
..........0,0,1 (c = 40)
............0,0 (c = 20)
........1,0,2 (c = 60)
..........0,1,2 (c = 60)"
`;

exports[`sample trees (default): 5 1`] = `
"1,2 (c = 50)
.. (c = 0)
..1 (c = 20)
....0 (c = 10)
..2 (c = 30)
....0 (c = 10)
..0,2 (c = 40)
....0 (c = 10)
....0,0 (c = 20)
....0,1 (c = 30)
..1,0 (c = 30)
....0,1 (c = 30)
......0 (c = 10)
......0,0 (c = 20)
....0 (c = 10)
....0,0 (c = 20)
..1,1 (c = 40)
....0,1 (c = 30)
......0 (c = 10)"
`;

exports[`sample trees (default): 6 1`] = `
"0,1,0,0 (c = 50)
..0,0,0,1 (c = 50)
.... (c = 0)
....0,0 (c = 20)
......0 (c = 10)
....0,0,0 (c = 30.000000000000004)
......0 (c = 10)
....0,1 (c = 30)
......0 (c = 10)
......1 (c = 20)
....0,0,1 (c = 40)
......0 (c = 10)
......1 (c = 20)
....0,0,0,0 (c = 40)
.. (c = 0)
..0,0 (c = 20)
....0 (c = 10)
..0,0,0 (c = 30.000000000000004)
....0 (c = 10)
..0,1 (c = 30)
....0 (c = 10)
....1 (c = 20)
..0,0,1 (c = 40)
....0 (c = 10)
....1 (c = 20)
..0,1,0 (c = 40)
....0 (c = 10)
....1 (c = 20)
....1,0 (c = 30)
..1,0 (c = 30)
....0 (c = 10)
....1 (c = 20)
..1,0,0 (c = 40)
....0 (c = 10)
....1 (c = 20)
..0,0,0,0 (c = 40)"
`;

exports[`sample trees (default): 7 1`] = `
"7,0,0,4 (c = 150)
..0,0,4,7 (c = 150)
.... (c = 0)
....0,0 (c = 20)
......0 (c = 10)
....0,0,4 (c = 70)
......0 (c = 10)
......4 (c = 50)
........2 (c = 30)
..........1 (c = 20)
........3 (c = 40)
..........1 (c = 20)
......0,4 (c = 60)
........0,2 (c = 40)
..........2 (c = 30)
............1 (c = 20)
..........0,1 (c = 30)
............1 (c = 20)
........0,3 (c = 50)
..........3 (c = 40)
............1 (c = 20)
..........0,1 (c = 30)
............1 (c = 20)
......0,0,0 (c = 30.000000000000004)
......0,0,2 (c = 50)
........2 (c = 30)
..........1 (c = 20)
........0,2 (c = 40)
..........0,1 (c = 30)
............1 (c = 20)
........0,0,1 (c = 40)
..........1 (c = 20)
..........0,1 (c = 30)
......0,0,3 (c = 60.00000000000001)
........3 (c = 40)
..........1 (c = 20)
........0,3 (c = 50)
..........0,1 (c = 30)
............1 (c = 20)
........0,0,1 (c = 40)
..........1 (c = 20)
..........0,1 (c = 30)
....0,4 (c = 60)
......0 (c = 10)
......4 (c = 50)
........2 (c = 30)
..........1 (c = 20)
........3 (c = 40)
..........1 (c = 20)
......0,2 (c = 40)
........2 (c = 30)
..........1 (c = 20)
........0,1 (c = 30)
..........1 (c = 20)
......0,3 (c = 50)
........3 (c = 40)
..........1 (c = 20)
........0,1 (c = 30)
..........1 (c = 20)
....0,7 (c = 90)
......0 (c = 10)
......7 (c = 80)
........3 (c = 40)
..........1 (c = 20)
..........2 (c = 30)
........5 (c = 60)
..........2 (c = 30)
............1 (c = 20)
..........4 (c = 50)
........6 (c = 70)
..........4 (c = 50)
............2 (c = 30)
..............1 (c = 20)
......0,3 (c = 50)
........3 (c = 40)
..........1 (c = 20)
..........2 (c = 30)
........0,1 (c = 30)
..........1 (c = 20)
........0,2 (c = 40)
..........2 (c = 30)
......0,5 (c = 70)
........5 (c = 60)
..........2 (c = 30)
............1 (c = 20)
..........4 (c = 50)
........0,2 (c = 40)
..........2 (c = 30)
............1 (c = 20)
..........0,1 (c = 30)
............1 (c = 20)
......0,6 (c = 80)
........6 (c = 70)
..........4 (c = 50)
............2 (c = 30)
..............1 (c = 20)
....4,7 (c = 130)
......4 (c = 50)
........0 (c = 10)
........2 (c = 30)"
`;

exports[`sample trees (default): 8 1`] = `
"7,8,4,6,8,3,8,6 (c = 580)
..3,4,6,6,7,8,8,8 (c = 580)
.... (c = 0)
....3,4,6,6 (c = 230)
......3,4 (c = 90)
........3 (c = 40)
..........0 (c = 10)
..........1 (c = 20)
..........2 (c = 30)
........4 (c = 50)
..........0 (c = 10)
..........2 (c = 30)
............1 (c = 20)
........0,4 (c = 60)
..........0 (c = 10)
..........0,0 (c = 20)
..........0,2 (c = 40)
............2 (c = 30)
..............1 (c = 20)
............0,1 (c = 30)
..............1 (c = 20)
..........0,3 (c = 50)
............0,1 (c = 30)
..............1 (c = 20)
........1,4 (c = 70)
..........1 (c = 20)
..........1,0 (c = 30)
............0,1 (c = 30)
..............0 (c = 10)
............0 (c = 10)
..........1,2 (c = 50)
............2 (c = 30)
............1,1 (c = 40)
..........1,3 (c = 60)
............1,1 (c = 40)
........2,4 (c = 80)
..........2 (c = 30)
..........2,0 (c = 40)
............0,2 (c = 40)
..............0 (c = 10)
............0 (c = 10)
..........2,2 (c = 60)
............2,1 (c = 50)
..............1,2 (c = 50)
................1 (c = 20)
..............1 (c = 20)
..........2,3 (c = 70)
............2,1 (c = 50)
..............1,2 (c = 50)
................1 (c = 20)
..............1 (c = 20)
........3,0 (c = 50)
..........0,3 (c = 50)
............0 (c = 10)
............0,0 (c = 20)
............0,1 (c = 30)
..............1 (c = 20)
............0,2 (c = 40)
..............2 (c = 30)
..........0 (c = 10)
..........0,0 (c = 20)
..........1,0 (c = 30)
............0,1 (c = 30)
..............1 (c = 20)
............1 (c = 20)
..........2,0 (c = 40)
............0,2 (c = 40)
..............2 (c = 30)
............2 (c = 30)
........3,2 (c = 70)
..........2,3 (c = 70)
............2 (c = 30)
..............1 (c = 20)
............1,3 (c = 60)
..............1 (c = 20)
..............1,0 (c = 30)
................0,1 (c = 30)
..................0 (c = 10)
................0 (c = 10)
..............1,1 (c = 40)
..............1,2 (c = 50)
............2,0 (c = 40)
..............0,2 (c = 40)
................0 (c = 10)
................0,1 (c = 30)
..................1 (c = 20)
..............0 (c = 10)
..............1,0 (c = 30)
................0,1 (c = 30)
..................1 (c = 20)
................1 (c = 20)
............2,1 (c = 50)
..............1,2 (c = 50)
................1 (c = 20)
................1,1 (c = 40)
..............1 (c = 20)
..............1,1 (c = 40)
............2,2 (c = 60)
..............1,2 (c = 50)
................1 (c = 20)"
`;

exports[`sample trees (default): 9 1`] = `
"1,8,0,6 (c = 190)
..0,1,6,8 (c = 190)
.... (c = 0)
....0,1 (c = 30)
......0 (c = 10)
......1 (c = 20)
......0,0 (c = 20)
....0,1,6 (c = 100)
......0 (c = 10)
......1 (c = 20)
......6 (c = 70)
........3 (c = 40)
..........2 (c = 30)
........4 (c = 50)
..........2 (c = 30)
........5 (c = 60)
..........2 (c = 30)
......0,6 (c = 80)
........0,0 (c = 20)
........0,3 (c = 50)
..........3 (c = 40)
............2 (c = 30)
..........0,2 (c = 40)
............2 (c = 30)
........0,4 (c = 60)
..........4 (c = 50)
............2 (c = 30)
..........0,2 (c = 40)
............2 (c = 30)
........0,5 (c = 70)
..........5 (c = 60)
............2 (c = 30)
..........0,2 (c = 40)
............2 (c = 30)
......1,6 (c = 90)
........1,0 (c = 30)
..........0,0 (c = 20)
........1,3 (c = 60)
..........3 (c = 40)
............2 (c = 30)
..........0,3 (c = 50)
............0,2 (c = 40)
..............2 (c = 30)
..........1,1 (c = 40)
..........1,2 (c = 50)
............2 (c = 30)
............0,2 (c = 40)
........1,4 (c = 70)
..........4 (c = 50)
............2 (c = 30)
..........0,4 (c = 60)
............0,2 (c = 40)
..............2 (c = 30)
..........1,2 (c = 50)
............2 (c = 30)
............0,2 (c = 40)
............1,1 (c = 40)
........1,5 (c = 80)
..........5 (c = 60)
............2 (c = 30)
..........0,5 (c = 70)
............0,2 (c = 40)
..............2 (c = 30)
..........1,2 (c = 50)
............2 (c = 30)
............0,2 (c = 40)
............1,1 (c = 40)
......0,0,6 (c = 90.00000000000001)
........0,0 (c = 20)
........0,0,0 (c = 30.000000000000004)
........0,0,3 (c = 60.00000000000001)
..........3 (c = 40)
............2 (c = 30)
..........0,3 (c = 50)
............0,2 (c = 40)
..............2 (c = 30)
..........0,0,1 (c = 40)
..........0,0,2 (c = 50)
............2 (c = 30)
............0,2 (c = 40)
........0,0,4 (c = 70)
..........4 (c = 50)
............2 (c = 30)
..........0,4 (c = 60)
............0,2 (c = 40)
..............2 (c = 30)
..........0,0,2 (c = 50)
............2 (c = 30)
............0,2 (c = 40)
............0,0,1 (c = 40)
........0,0,5 (c = 80)
..........5 (c = 60)
............2 (c = 30)
..........0,5 (c = 70)
............0,2 (c = 40)
..............2 (c = 30)
..........0,0,2 (c = 50)
............2 (c = 30)
............0,2 (c = 40)
............0,0,1 (c = 40)"
`;

exports[`sample trees (default): 10 1`] = `
"5,9,4,6,4,1,4,9,1,5 (c = 580)
..1,1,4,4,4,5,5,6,9,9 (c = 580)
.... (c = 0)
....1,1,4,4,4 (c = 190)
......1,1 (c = 40)
........1 (c = 20)
..........0 (c = 10)
........0,1 (c = 30)
..........0 (c = 10)
..........0,0 (c = 20)
........1,0 (c = 30)
..........0 (c = 10)
..........0,0 (c = 20)
......1,1,4 (c = 90)
........1 (c = 20)
..........0 (c = 10)
........4 (c = 50)
..........0 (c = 10)
..........2 (c = 30)
..........3 (c = 40)
........1,4 (c = 70)
..........0,4 (c = 60)
............0 (c = 10)
............0,0 (c = 20)
............0,2 (c = 40)
..............2 (c = 30)
..............0,1 (c = 30)
............0,3 (c = 50)
..............3 (c = 40)
..............0,1 (c = 30)
..........1,0 (c = 30)
............0,1 (c = 30)
..............0 (c = 10)
..............0,0 (c = 20)
............0 (c = 10)
............0,0 (c = 20)
..........1,2 (c = 50)
............2 (c = 30)
............0,2 (c = 40)
..............0 (c = 10)
..............0,1 (c = 30)
..........1,3 (c = 60)
............3 (c = 40)
............0,3 (c = 50)
..............0 (c = 10)
..............0,1 (c = 30)
........0,1,4 (c = 80)
..........0 (c = 10)
..........0,1 (c = 30)
............0,0 (c = 20)
..........0,4 (c = 60)
............0,0 (c = 20)
............0,2 (c = 40)
..............2 (c = 30)
............0,3 (c = 50)
..............3 (c = 40)
..........0,0,4 (c = 70)
............0,0 (c = 20)
............0,0,0 (c = 30.000000000000004)
............0,0,2 (c = 50)
..............2 (c = 30)
..............0,2 (c = 40)
..............0,0,1 (c = 40)
............0,0,3 (c = 60.00000000000001)
..............3 (c = 40)
..............0,3 (c = 50)
..............0,0,1 (c = 40)
..........0,1,0 (c = 40)
............0,0,1 (c = 40)
..............0,0 (c = 20)
..............0,0,0 (c = 30.000000000000004)
............0,0 (c = 20)
............1,0 (c = 30)
............0,0,0 (c = 30.000000000000004)
..........0,1,2 (c = 60)
............2 (c = 30)
............0,2 (c = 40)
............1,2 (c = 50)
............0,0,2 (c = 50)
..............0,0 (c = 20)
..............0,0,1 (c = 40)
............0,1,1 (c = 50)
..............0,0,1 (c = 40)
................0,0 (c = 20)
..........0,1,3 (c = 70)
............3 (c = 40)
............0,3 (c = 50)
............1,3 (c = 60)
............0,0,3 (c = 60.00000000000001)
..............0,0 (c = 20)
..............0,0,1 (c = 40)
............0,1,1 (c = 50)
..............0,0,1 (c = 40)
................0,0 (c = 20)
........1,0,4 (c = 80)
..........0 (c = 10)
..........0,1 (c = 30)
............0,0 (c = 20)
..........0,4 (c = 60)
............0,0 (c = 20)"
`;

exports[`sample trees (ofMinLength(1)): 1 1`] = `
"2 (c = 11.11111111111111)
..1 (c = 0)"
`;

exports[`sample trees (ofMinLength(1)): 2 1`] = `
"2,3,2 (c = 66.66666666666666)
..2,2,3 (c = 66.66666666666666)
....2 (c = 11.11111111111111)
......1 (c = 0)
....2,2 (c = 33.33333333333333)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
......2,1 (c = 22.22222222222222)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
....3 (c = 22.22222222222222)
......1 (c = 0)
....2,3 (c = 44.44444444444444)
......1,3 (c = 33.33333333333333)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
........1,2 (c = 22.22222222222222)
......2,1 (c = 22.22222222222222)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........1,1 (c = 11.11111111111111)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
....1,2,3 (c = 55.55555555555555)
......1 (c = 0)
......1,2 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......1,3 (c = 33.33333333333333)
........1,1 (c = 11.11111111111111)
......1,1,3 (c = 44.44444444444444)
........1,1 (c = 11.11111111111111)
........1,1,1 (c = 22.22222222222222)
........1,1,2 (c = 33.33333333333333)
......1,2,1 (c = 33.33333333333333)
........1,1,2 (c = 33.33333333333333)
..........1,1 (c = 11.11111111111111)
..........1,1,1 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
........2,1 (c = 22.22222222222222)
........1,1,1 (c = 22.22222222222222)
......1,2,2 (c = 44.44444444444444)
........1,1,2 (c = 33.33333333333333)
..........1,1 (c = 11.11111111111111)
....2,1,3 (c = 55.55555555555555)
......1 (c = 0)
......1,2 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......1,3 (c = 33.33333333333333)
........1,1 (c = 11.11111111111111)
......2,1 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......1,1,3 (c = 44.44444444444444)
........1,1 (c = 11.11111111111111)
........1,1,1 (c = 22.22222222222222)
........1,1,2 (c = 33.33333333333333)
......2,1,1 (c = 33.33333333333333)
........1,1,2 (c = 33.33333333333333)
..........1,1 (c = 11.11111111111111)
..........1,1,1 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
........1,1,1 (c = 22.22222222222222)
......2,1,2 (c = 44.44444444444444)
........1,2,2 (c = 44.44444444444444)
..........1,1,2 (c = 33.33333333333333)
............1,1 (c = 11.11111111111111)
........1,1,2 (c = 33.33333333333333)
..........1,1 (c = 11.11111111111111)
....2,2,1 (c = 44.44444444444444)
......1,2,2 (c = 44.44444444444444)
........1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
........1,1,2 (c = 33.33333333333333)
..........1,1 (c = 11.11111111111111)
..........1,1,1 (c = 22.22222222222222)
........1,2,1 (c = 33.33333333333333)
..........1,1 (c = 11.11111111111111)
..........2,1 (c = 22.22222222222222)
..........1,1,1 (c = 22.22222222222222)
......1 (c = 0)
......1,2 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......2,1 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......1,2,1 (c = 33.33333333333333)
........1,1,2 (c = 33.33333333333333)
..........1,1 (c = 11.11111111111111)
..........1,1,1 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
........1,1,1 (c = 22.22222222222222)
......2,1,1 (c = 33.33333333333333)
........1,1,2 (c = 33.33333333333333)
..........1,1 (c = 11.11111111111111)
..........1,1,1 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
........1,1,1 (c = 22.22222222222222)
....2,2,2 (c = 55.55555555555556)
......1,2,2 (c = 44.44444444444444)
........1 (c = 0)"
`;

exports[`sample trees (ofMinLength(1)): 3 1`] = `
"4 (c = 33.33333333333333)
..1 (c = 0)
..2 (c = 11.11111111111111)
..3 (c = 22.22222222222222)"
`;

exports[`sample trees (ofMinLength(1)): 4 1`] = `
"2,4,1,2,1 (c = 100)
..1,1,2,2,4 (c = 100)
....1 (c = 0)
....1,1,2 (c = 33.33333333333333)
......1,1 (c = 11.11111111111111)
......2 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
......1,1,1 (c = 22.22222222222222)
....1,1,2,2 (c = 55.55555555555556)
......1,1 (c = 11.11111111111111)
......2 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
......2,2 (c = 33.33333333333333)
........2,1 (c = 22.22222222222222)
......1,2,2 (c = 44.44444444444444)
........1,2,1 (c = 33.33333333333333)
..........2,1 (c = 22.22222222222222)
..........1,1,1 (c = 22.22222222222222)
......1,1,1,2 (c = 44.44444444444444)
........1,1,1 (c = 22.22222222222222)
........1,1,1,1 (c = 33.33333333333333)
......1,1,2,1 (c = 44.44444444444444)
........1,1,1 (c = 22.22222222222222)
........2,1 (c = 22.22222222222222)
........1,2,1 (c = 33.33333333333333)
........1,1,1,1 (c = 33.33333333333333)
....2 (c = 11.11111111111111)
....4 (c = 33.33333333333333)
......3 (c = 22.22222222222222)
....1,1,4 (c = 55.55555555555555)
......1,1 (c = 11.11111111111111)
......1,4 (c = 44.44444444444444)
........1,2 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
......1,1,1 (c = 22.22222222222222)
......1,1,3 (c = 44.44444444444444)
........3 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
....1,2,2 (c = 44.44444444444444)
......1,2 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......2,2 (c = 33.33333333333333)
........2,1 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
......1,2,1 (c = 33.33333333333333)
........1,1 (c = 11.11111111111111)
........2,1 (c = 22.22222222222222)
........1,1,1 (c = 22.22222222222222)
....1,2,4 (c = 66.66666666666666)
......1,2 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......1,4 (c = 44.44444444444444)
........1,1 (c = 11.11111111111111)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
......2,4 (c = 55.55555555555555)
........2,1 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
........2,2 (c = 33.33333333333333)
........2,3 (c = 44.44444444444444)
..........3 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
......1,2,1 (c = 33.33333333333333)
........1,1 (c = 11.11111111111111)
........2,1 (c = 22.22222222222222)
........1,1,1 (c = 22.22222222222222)
......1,2,3 (c = 55.55555555555555)
........3 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
........2,3 (c = 44.44444444444444)
........1,1,3 (c = 44.44444444444444)
..........1,1 (c = 11.11111111111111)
....2,2,4 (c = 77.77777777777777)
......2,2 (c = 33.33333333333333)
........1,2 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
........2,1 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
......2,4 (c = 55.55555555555555)
........1,4 (c = 44.44444444444444)
..........1,1 (c = 11.11111111111111)
..........1,2 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
........2,1 (c = 22.22222222222222)
..........1,2 (c = 22.22222222222222)
............1,1 (c = 11.11111111111111)
..........1,1 (c = 11.11111111111111)
........2,3 (c = 44.44444444444444)
..........3 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
......2,1,4 (c = 66.66666666666666)
........1,2 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
........1,4 (c = 44.44444444444444)
..........1,1 (c = 11.11111111111111)
..........1,3 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
........2,1 (c = 22.22222222222222)"
`;

exports[`sample trees (ofMinLength(1)): 5 1`] = `
"2,4,1,2,1 (c = 100)
..1,1,2,2,4 (c = 100)
....1 (c = 0)
....1,1,2 (c = 33.33333333333333)
......1,1 (c = 11.11111111111111)
......2 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
......1,1,1 (c = 22.22222222222222)
....1,1,2,2 (c = 55.55555555555556)
......1,1 (c = 11.11111111111111)
......2 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
......2,2 (c = 33.33333333333333)
........2,1 (c = 22.22222222222222)
......1,2,2 (c = 44.44444444444444)
........1,2,1 (c = 33.33333333333333)
..........2,1 (c = 22.22222222222222)
..........1,1,1 (c = 22.22222222222222)
......1,1,1,2 (c = 44.44444444444444)
........1,1,1 (c = 22.22222222222222)
........1,1,1,1 (c = 33.33333333333333)
......1,1,2,1 (c = 44.44444444444444)
........1,1,1 (c = 22.22222222222222)
........2,1 (c = 22.22222222222222)
........1,2,1 (c = 33.33333333333333)
........1,1,1,1 (c = 33.33333333333333)
....2 (c = 11.11111111111111)
....4 (c = 33.33333333333333)
......3 (c = 22.22222222222222)
....1,1,4 (c = 55.55555555555555)
......1,1 (c = 11.11111111111111)
......1,4 (c = 44.44444444444444)
........1,2 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
......1,1,1 (c = 22.22222222222222)
......1,1,3 (c = 44.44444444444444)
........3 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
....1,2,2 (c = 44.44444444444444)
......1,2 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......2,2 (c = 33.33333333333333)
........2,1 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
......1,2,1 (c = 33.33333333333333)
........1,1 (c = 11.11111111111111)
........2,1 (c = 22.22222222222222)
........1,1,1 (c = 22.22222222222222)
....1,2,4 (c = 66.66666666666666)
......1,2 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......1,4 (c = 44.44444444444444)
........1,1 (c = 11.11111111111111)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
......2,4 (c = 55.55555555555555)
........2,1 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
........2,2 (c = 33.33333333333333)
........2,3 (c = 44.44444444444444)
..........3 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
......1,2,1 (c = 33.33333333333333)
........1,1 (c = 11.11111111111111)
........2,1 (c = 22.22222222222222)
........1,1,1 (c = 22.22222222222222)
......1,2,3 (c = 55.55555555555555)
........3 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
........2,3 (c = 44.44444444444444)
........1,1,3 (c = 44.44444444444444)
..........1,1 (c = 11.11111111111111)
....2,2,4 (c = 77.77777777777777)
......2,2 (c = 33.33333333333333)
........1,2 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
........2,1 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
......2,4 (c = 55.55555555555555)
........1,4 (c = 44.44444444444444)
..........1,1 (c = 11.11111111111111)
..........1,2 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
........2,1 (c = 22.22222222222222)
..........1,2 (c = 22.22222222222222)
............1,1 (c = 11.11111111111111)
..........1,1 (c = 11.11111111111111)
........2,3 (c = 44.44444444444444)
..........3 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
......2,1,4 (c = 66.66666666666666)
........1,2 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
........1,4 (c = 44.44444444444444)
..........1,1 (c = 11.11111111111111)
..........1,3 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
........2,1 (c = 22.22222222222222)"
`;

exports[`sample trees (ofMinLength(1)): 6 1`] = `
"2,3,5 (c = 100)
..2 (c = 11.11111111111111)
....1 (c = 0)
..2,3 (c = 44.44444444444444)
....3 (c = 22.22222222222222)
......1 (c = 0)
....1,3 (c = 33.33333333333333)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
....2,1 (c = 22.22222222222222)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
....2,2 (c = 33.33333333333333)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
..3 (c = 22.22222222222222)
....1 (c = 0)
..5 (c = 44.44444444444444)
....1 (c = 0)
....4 (c = 33.33333333333333)
..2,5 (c = 66.66666666666666)
....1,5 (c = 55.55555555555556)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
......1,3 (c = 33.33333333333333)
........1,2 (c = 22.22222222222222)
......1,4 (c = 44.44444444444444)
........4 (c = 33.33333333333333)
........1,2 (c = 22.22222222222222)
....2,1 (c = 22.22222222222222)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
....2,4 (c = 55.55555555555555)
......4 (c = 33.33333333333333)
......1,4 (c = 44.44444444444444)
........1 (c = 0)
........1,2 (c = 22.22222222222222)
......2,2 (c = 33.33333333333333)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..3,5 (c = 77.77777777777777)
....1,5 (c = 55.55555555555556)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
......1,3 (c = 33.33333333333333)
........1,2 (c = 22.22222222222222)
......1,4 (c = 44.44444444444444)
........4 (c = 33.33333333333333)
........1,2 (c = 22.22222222222222)
....3,1 (c = 33.33333333333333)
......1,3 (c = 33.33333333333333)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
........1,2 (c = 22.22222222222222)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
......2,1 (c = 22.22222222222222)
........1,2 (c = 22.22222222222222)
....3,3 (c = 55.55555555555555)
......1,3 (c = 33.33333333333333)
........1 (c = 0)
........1,2 (c = 22.22222222222222)
......3,2 (c = 44.44444444444444)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
........2,2 (c = 33.33333333333333)
....3,4 (c = 66.66666666666666)
......4 (c = 33.33333333333333)
......1,4 (c = 44.44444444444444)
........1 (c = 0)
........1,2 (c = 22.22222222222222)
......2,4 (c = 55.55555555555555)
........2,2 (c = 33.33333333333333)
......3,2 (c = 44.44444444444444)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
........2,2 (c = 33.33333333333333)
..1,3,5 (c = 88.88888888888889)
....1 (c = 0)
....1,3 (c = 33.33333333333333)
......1,1 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
....1,5 (c = 55.55555555555556)
......1,1 (c = 11.11111111111111)
......1,4 (c = 44.44444444444444)
........4 (c = 33.33333333333333)
........1,2 (c = 22.22222222222222)
....1,1,5 (c = 66.66666666666666)
......1,1 (c = 11.11111111111111)
......1,1,1 (c = 22.22222222222222)
......1,1,3 (c = 44.44444444444444)
........1,1,2 (c = 33.33333333333333)
..........1,2 (c = 22.22222222222222)"
`;

exports[`sample trees (ofMinLength(1)): 7 1`] = `
"1,2,1,1,4 (c = 88.88888888888889)
..1,1,1,2,4 (c = 88.88888888888889)
....1 (c = 0)
....1,1,1 (c = 22.22222222222222)
......1,1 (c = 11.11111111111111)
....1,1,1,2 (c = 44.44444444444444)
......1,1 (c = 11.11111111111111)
......2 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
......1,1,2 (c = 33.33333333333333)
......1,1,1,1 (c = 33.33333333333333)
....2 (c = 11.11111111111111)
....4 (c = 33.33333333333333)
......3 (c = 22.22222222222222)
....1,1,2 (c = 33.33333333333333)
......1,1 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
....1,1,4 (c = 55.55555555555555)
......1,1 (c = 11.11111111111111)
......1,4 (c = 44.44444444444444)
........1,2 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
......1,1,3 (c = 44.44444444444444)
........3 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
....1,2,4 (c = 66.66666666666666)
......1,2 (c = 22.22222222222222)
........1,1 (c = 11.11111111111111)
......1,4 (c = 44.44444444444444)
........1,1 (c = 11.11111111111111)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
......2,4 (c = 55.55555555555555)
........2,1 (c = 22.22222222222222)
..........1,1 (c = 11.11111111111111)
........2,2 (c = 33.33333333333333)
........2,3 (c = 44.44444444444444)
..........3 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
......1,2,1 (c = 33.33333333333333)
........1,1 (c = 11.11111111111111)
........2,1 (c = 22.22222222222222)
......1,2,2 (c = 44.44444444444444)
........2,2 (c = 33.33333333333333)
......1,2,3 (c = 55.55555555555555)
........3 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
........2,3 (c = 44.44444444444444)
........1,1,3 (c = 44.44444444444444)
..........1,1 (c = 11.11111111111111)
....1,1,1,4 (c = 66.66666666666666)
......1,1 (c = 11.11111111111111)
......1,4 (c = 44.44444444444444)
........1,2 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
......1,1,1,1 (c = 33.33333333333333)
......1,1,1,3 (c = 55.55555555555555)
........3 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
........1,1,3 (c = 44.44444444444444)
....1,1,2,4 (c = 77.77777777777777)
......1,1 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
......1,4 (c = 44.44444444444444)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
......2,4 (c = 55.55555555555555)
........2,1 (c = 22.22222222222222)
........2,2 (c = 33.33333333333333)
........2,3 (c = 44.44444444444444)
..........3 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
......1,1,2,1 (c = 44.44444444444444)
........2,1 (c = 22.22222222222222)
........1,2,1 (c = 33.33333333333333)
........1,1,1,1 (c = 33.33333333333333)
......1,1,2,2 (c = 55.55555555555556)
........2,2 (c = 33.33333333333333)
........1,2,2 (c = 44.44444444444444)
......1,1,2,3 (c = 66.66666666666666)
........3 (c = 22.22222222222222)
........1,3 (c = 33.33333333333333)
........2,3 (c = 44.44444444444444)
........1,1,3 (c = 44.44444444444444)
........1,2,3 (c = 55.55555555555555)
........1,1,1,3 (c = 55.55555555555555)
....1,1,1,1,4 (c = 77.77777777777777)
......1,1,1,1 (c = 33.33333333333333)
........1,1 (c = 11.11111111111111)
......1,1,1,1,1 (c = 44.44444444444444)
......1,1,1,1,2 (c = 55.55555555555556)
......1,1,1,1,3 (c = 66.66666666666666)
........3 (c = 22.22222222222222)
........1,1,3 (c = 44.44444444444444)
..........1,1 (c = 11.11111111111111)
..........1,3 (c = 33.33333333333333)
........1,1,1,3 (c = 55.55555555555555)
..........1,1 (c = 11.11111111111111)"
`;

exports[`sample trees (ofMinLength(1)): 8 1`] = `
"8,1,1,5,1 (c = 166.66666666666666)
..1,1,1,5,8 (c = 166.66666666666666)
....1 (c = 0)
....1,1,1 (c = 22.22222222222222)
......1,1 (c = 11.11111111111111)
....1,1,1,5 (c = 77.77777777777777)
......1,1 (c = 11.11111111111111)
......5 (c = 44.44444444444444)
........3 (c = 22.22222222222222)
..........2 (c = 11.11111111111111)
........4 (c = 33.33333333333333)
..........2 (c = 11.11111111111111)
......1,5 (c = 55.55555555555556)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
............2 (c = 11.11111111111111)
..........1,2 (c = 22.22222222222222)
............2 (c = 11.11111111111111)
........1,4 (c = 44.44444444444444)
..........4 (c = 33.33333333333333)
............2 (c = 11.11111111111111)
..........1,2 (c = 22.22222222222222)
............2 (c = 11.11111111111111)
......1,1,5 (c = 66.66666666666666)
........1,1,3 (c = 44.44444444444444)
..........3 (c = 22.22222222222222)
............2 (c = 11.11111111111111)
..........1,3 (c = 33.33333333333333)
............1,2 (c = 22.22222222222222)
..............2 (c = 11.11111111111111)
..........1,1,2 (c = 33.33333333333333)
............2 (c = 11.11111111111111)
............1,2 (c = 22.22222222222222)
........1,1,4 (c = 55.55555555555555)
..........4 (c = 33.33333333333333)
............2 (c = 11.11111111111111)
..........1,4 (c = 44.44444444444444)
............1,2 (c = 22.22222222222222)
..............2 (c = 11.11111111111111)
..........1,1,2 (c = 33.33333333333333)
............2 (c = 11.11111111111111)
............1,2 (c = 22.22222222222222)
......1,1,1,1 (c = 33.33333333333333)
......1,1,1,3 (c = 55.55555555555555)
........3 (c = 22.22222222222222)
..........2 (c = 11.11111111111111)
........1,3 (c = 33.33333333333333)
..........1,2 (c = 22.22222222222222)
............2 (c = 11.11111111111111)
........1,1,3 (c = 44.44444444444444)
..........1,1,2 (c = 33.33333333333333)
............2 (c = 11.11111111111111)
............1,2 (c = 22.22222222222222)
........1,1,1,2 (c = 44.44444444444444)
..........2 (c = 11.11111111111111)
..........1,2 (c = 22.22222222222222)
..........1,1,2 (c = 33.33333333333333)
......1,1,1,4 (c = 66.66666666666666)
........4 (c = 33.33333333333333)
..........2 (c = 11.11111111111111)
........1,4 (c = 44.44444444444444)
..........1,2 (c = 22.22222222222222)
............2 (c = 11.11111111111111)
........1,1,4 (c = 55.55555555555555)
..........1,1,2 (c = 33.33333333333333)
............2 (c = 11.11111111111111)
............1,2 (c = 22.22222222222222)
........1,1,1,2 (c = 44.44444444444444)
..........2 (c = 11.11111111111111)
..........1,2 (c = 22.22222222222222)
..........1,1,2 (c = 33.33333333333333)
....5 (c = 44.44444444444444)
......3 (c = 22.22222222222222)
........2 (c = 11.11111111111111)
......4 (c = 33.33333333333333)
........2 (c = 11.11111111111111)
....8 (c = 77.77777777777777)
......4 (c = 33.33333333333333)
........2 (c = 11.11111111111111)
........3 (c = 22.22222222222222)
......6 (c = 55.55555555555556)
........3 (c = 22.22222222222222)
..........2 (c = 11.11111111111111)
......7 (c = 66.66666666666666)
....1,1,5 (c = 66.66666666666666)
......1,1 (c = 11.11111111111111)
......1,5 (c = 55.55555555555556)
........1,3 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
............2 (c = 11.11111111111111)
..........1,2 (c = 22.22222222222222)
............2 (c = 11.11111111111111)
........1,4 (c = 44.44444444444444)
..........4 (c = 33.33333333333333)
............2 (c = 11.11111111111111)
..........1,2 (c = 22.22222222222222)
............2 (c = 11.11111111111111)
......1,1,3 (c = 44.44444444444444)
........3 (c = 22.22222222222222)
..........2 (c = 11.11111111111111)"
`;

exports[`sample trees (ofMinLength(1)): 9 1`] = `
"8,9,5,7,9,4,9,7,9 (c = 733.3333333333333)
..4,5,7,7,8,9,9,9,9 (c = 733.3333333333334)
....4 (c = 33.33333333333333)
......1 (c = 0)
......2 (c = 11.11111111111111)
......3 (c = 22.22222222222222)
....4,5,7,7,8 (c = 333.33333333333326)
......4,5,7 (c = 166.66666666666666)
........4,5 (c = 88.88888888888889)
..........5 (c = 44.44444444444444)
............1 (c = 0)
............3 (c = 22.22222222222222)
..............2 (c = 11.11111111111111)
..........1,5 (c = 55.55555555555556)
............1 (c = 0)
............1,1 (c = 11.11111111111111)
............1,3 (c = 33.33333333333333)
..............3 (c = 22.22222222222222)
................2 (c = 11.11111111111111)
..............1,2 (c = 22.22222222222222)
................2 (c = 11.11111111111111)
............1,4 (c = 44.44444444444444)
..............1,2 (c = 22.22222222222222)
................2 (c = 11.11111111111111)
..........2,5 (c = 66.66666666666666)
............2 (c = 11.11111111111111)
............2,1 (c = 22.22222222222222)
..............1,2 (c = 22.22222222222222)
................1 (c = 0)
..............1 (c = 0)
............2,3 (c = 44.44444444444444)
..............3 (c = 22.22222222222222)
..............2,2 (c = 33.33333333333333)
............2,4 (c = 55.55555555555555)
..............2,2 (c = 33.33333333333333)
..........3,5 (c = 77.77777777777777)
............3 (c = 22.22222222222222)
............3,1 (c = 33.33333333333333)
..............1,3 (c = 33.33333333333333)
................1 (c = 0)
..............1 (c = 0)
............3,3 (c = 55.55555555555555)
..............3,2 (c = 44.44444444444444)
................2,3 (c = 44.44444444444444)
..................2 (c = 11.11111111111111)
................2 (c = 11.11111111111111)
............3,4 (c = 66.66666666666666)
..............3,2 (c = 44.44444444444444)
................2,3 (c = 44.44444444444444)
..................2 (c = 11.11111111111111)
................2 (c = 11.11111111111111)
..........4,1 (c = 44.44444444444444)
............1,4 (c = 44.44444444444444)
..............1 (c = 0)
..............1,1 (c = 11.11111111111111)
..............1,2 (c = 22.22222222222222)
................2 (c = 11.11111111111111)
..............1,3 (c = 33.33333333333333)
................3 (c = 22.22222222222222)
............1 (c = 0)
............1,1 (c = 11.11111111111111)
............2,1 (c = 22.22222222222222)
..............1,2 (c = 22.22222222222222)
................2 (c = 11.11111111111111)
..............2 (c = 11.11111111111111)
............3,1 (c = 33.33333333333333)
..............1,3 (c = 33.33333333333333)
................3 (c = 22.22222222222222)
..............3 (c = 22.22222222222222)
..........4,3 (c = 66.66666666666666)
............3,4 (c = 66.66666666666666)
..............3 (c = 22.22222222222222)
................2 (c = 11.11111111111111)
..............2,4 (c = 55.55555555555555)
................2 (c = 11.11111111111111)
................2,1 (c = 22.22222222222222)
..................1,2 (c = 22.22222222222222)
....................1 (c = 0)
..................1 (c = 0)
................2,2 (c = 33.33333333333333)
................2,3 (c = 44.44444444444444)
..............3,1 (c = 33.33333333333333)
................1,3 (c = 33.33333333333333)
..................1 (c = 0)
..................1,2 (c = 22.22222222222222)
....................2 (c = 11.11111111111111)
................1 (c = 0)
................2,1 (c = 22.22222222222222)
..................1,2 (c = 22.22222222222222)
....................2 (c = 11.11111111111111)
..................2 (c = 11.11111111111111)
..............3,2 (c = 44.44444444444444)
................2,3 (c = 44.44444444444444)
..................2 (c = 11.11111111111111)
..................2,2 (c = 33.33333333333333)
................2 (c = 11.11111111111111)
................2,2 (c = 33.33333333333333)
..............3,3 (c = 55.55555555555555)
................2,3 (c = 44.44444444444444)
..................2 (c = 11.11111111111111)"
`;

exports[`sample trees (ofMinLength(1)): 10 1`] = `
"2,9,1,7,1 (c = 211.11111111111111)
..1,1,2,7,9 (c = 211.1111111111111)
....1 (c = 0)
....1,1,2 (c = 33.33333333333333)
......1,1 (c = 11.11111111111111)
......2 (c = 11.11111111111111)
......1,2 (c = 22.22222222222222)
......1,1,1 (c = 22.22222222222222)
....1,1,2,7 (c = 111.1111111111111)
......1,1 (c = 11.11111111111111)
......2 (c = 11.11111111111111)
......7 (c = 66.66666666666666)
........4 (c = 33.33333333333333)
..........3 (c = 22.22222222222222)
........5 (c = 44.44444444444444)
..........3 (c = 22.22222222222222)
........6 (c = 55.55555555555556)
..........3 (c = 22.22222222222222)
......1,2 (c = 22.22222222222222)
......1,7 (c = 77.77777777777777)
........1,4 (c = 44.44444444444444)
..........4 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
........1,5 (c = 55.55555555555556)
..........5 (c = 44.44444444444444)
............3 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
........1,6 (c = 66.66666666666667)
..........6 (c = 55.55555555555556)
............3 (c = 22.22222222222222)
..........1,3 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
......2,7 (c = 88.88888888888889)
........2,1 (c = 22.22222222222222)
........2,4 (c = 55.55555555555555)
..........4 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
..........1,4 (c = 44.44444444444444)
............1,3 (c = 33.33333333333333)
..............3 (c = 22.22222222222222)
..........2,2 (c = 33.33333333333333)
..........2,3 (c = 44.44444444444444)
............3 (c = 22.22222222222222)
............1,3 (c = 33.33333333333333)
........2,5 (c = 66.66666666666666)
..........5 (c = 44.44444444444444)
............3 (c = 22.22222222222222)
..........1,5 (c = 55.55555555555556)
............1,3 (c = 33.33333333333333)
..............3 (c = 22.22222222222222)
..........2,3 (c = 44.44444444444444)
............3 (c = 22.22222222222222)
............1,3 (c = 33.33333333333333)
............2,2 (c = 33.33333333333333)
........2,6 (c = 77.77777777777777)
..........6 (c = 55.55555555555556)
............3 (c = 22.22222222222222)
..........1,6 (c = 66.66666666666667)
............1,3 (c = 33.33333333333333)
..............3 (c = 22.22222222222222)
..........2,3 (c = 44.44444444444444)
............3 (c = 22.22222222222222)
............1,3 (c = 33.33333333333333)
............2,2 (c = 33.33333333333333)
......1,1,7 (c = 88.88888888888889)
........1,1,1 (c = 22.22222222222222)
........1,1,4 (c = 55.55555555555555)
..........4 (c = 33.33333333333333)
............3 (c = 22.22222222222222)
..........1,4 (c = 44.44444444444444)
............1,3 (c = 33.33333333333333)
..............3 (c = 22.22222222222222)
..........1,1,3 (c = 44.44444444444444)
............3 (c = 22.22222222222222)
............1,3 (c = 33.33333333333333)
........1,1,5 (c = 66.66666666666666)
..........5 (c = 44.44444444444444)
............3 (c = 22.22222222222222)
..........1,5 (c = 55.55555555555556)
............1,3 (c = 33.33333333333333)
..............3 (c = 22.22222222222222)
..........1,1,3 (c = 44.44444444444444)
............3 (c = 22.22222222222222)
............1,3 (c = 33.33333333333333)
........1,1,6 (c = 77.77777777777777)
..........6 (c = 55.55555555555556)
............3 (c = 22.22222222222222)
..........1,6 (c = 66.66666666666667)
............1,3 (c = 33.33333333333333)
..............3 (c = 22.22222222222222)
..........1,1,3 (c = 44.44444444444444)
............3 (c = 22.22222222222222)
............1,3 (c = 33.33333333333333)
......1,2,7 (c = 99.99999999999999)
........1,2,1 (c = 33.33333333333333)
..........2,1 (c = 22.22222222222222)
..........1,1,1 (c = 22.22222222222222)"
`;

exports[`sample trees (ofMinLength(2)): 1 1`] = `
"2,1 (c = 11.11111111111111)
..1,2 (c = 11.11111111111111)
....1,1 (c = 0)
..1,1 (c = 0)"
`;

exports[`sample trees (ofMinLength(2)): 2 1`] = `
"2,3,2,1 (c = 69.44444444444444)
..1,2,2,3 (c = 69.44444444444446)
....1,2 (c = 11.11111111111111)
......1,1 (c = 0)
....1,2,2 (c = 34.72222222222222)
......2,2 (c = 22.22222222222222)
........2,1 (c = 11.11111111111111)
..........1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1 (c = 0)
........1,1,1 (c = 12.5)
......1,2,1 (c = 23.61111111111111)
........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
........1,1,1 (c = 12.5)
....1,3 (c = 22.22222222222222)
......1,1 (c = 0)
....2,2 (c = 22.22222222222222)
......2,1 (c = 11.11111111111111)
........1,1 (c = 0)
....2,3 (c = 33.33333333333333)
......2,1 (c = 11.11111111111111)
........1,1 (c = 0)
....1,2,3 (c = 45.83333333333333)
......1,1,3 (c = 34.72222222222222)
........1,1 (c = 0)
........1,1,1 (c = 12.5)
........1,1,2 (c = 23.61111111111111)
......1,2,1 (c = 23.61111111111111)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,1,1 (c = 12.5)
........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
........1,1,1 (c = 12.5)
....2,2,3 (c = 56.94444444444444)
......2,1,3 (c = 45.83333333333333)
........2,1 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1,3 (c = 34.72222222222222)
..........1,1 (c = 0)
..........1,1,1 (c = 12.5)
..........1,1,2 (c = 23.61111111111111)
........2,1,1 (c = 23.61111111111111)
..........1,1,2 (c = 23.61111111111111)
............1,1 (c = 0)
............1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1,1 (c = 12.5)
........2,1,2 (c = 34.72222222222222)
..........1,1,2 (c = 23.61111111111111)
............1,1 (c = 0)
......2,2,1 (c = 34.72222222222222)
........2,1 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2,1 (c = 23.61111111111111)
..........1,1,2 (c = 23.61111111111111)
............1,1 (c = 0)
............1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1,1 (c = 12.5)
........2,1,1 (c = 23.61111111111111)
..........1,1,2 (c = 23.61111111111111)
............1,1 (c = 0)
............1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1,1 (c = 12.5)
......2,2,2 (c = 45.83333333333333)
........2,1,2 (c = 34.72222222222222)
..........2,1 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1,2 (c = 23.61111111111111)
............1,1 (c = 0)
....1,1,2,3 (c = 58.333333333333336)
......1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1,1 (c = 12.5)
......1,1,3 (c = 34.72222222222222)
........1,1,1 (c = 12.5)
......1,1,1,3 (c = 47.22222222222222)
........1,1,1 (c = 12.5)
........1,1,1,1 (c = 25)
........1,1,1,2 (c = 36.111111111111114)
......1,1,2,1 (c = 36.111111111111114)
........1,1,1,2 (c = 36.111111111111114)
..........1,1,1 (c = 12.5)
..........1,1,1,1 (c = 25)
........1,1,1 (c = 12.5)
........2,1 (c = 11.11111111111111)
........1,2,1 (c = 23.61111111111111)
........1,1,1,1 (c = 25)
......1,1,2,2 (c = 47.22222222222223)
........1,1,1,2 (c = 36.111111111111114)
..........1,1,1 (c = 12.5)
....1,2,1,3 (c = 58.333333333333336)
......1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1,1 (c = 12.5)
......1,1,3 (c = 34.72222222222222)
........1,1,1 (c = 12.5)"
`;

exports[`sample trees (ofMinLength(2)): 3 1`] = `
"4,1,1,1 (c = 58.33333333333333)
..1,1,1,4 (c = 58.33333333333333)
....1,1 (c = 0)
....1,1,1 (c = 12.5)
....1,4 (c = 33.33333333333333)
......1,2 (c = 11.11111111111111)
......1,3 (c = 22.22222222222222)
....1,1,4 (c = 45.83333333333333)
......1,1,2 (c = 23.61111111111111)
........1,2 (c = 11.11111111111111)
......1,1,3 (c = 34.72222222222222)
........1,3 (c = 22.22222222222222)
....1,1,1,1 (c = 25)
....1,1,1,2 (c = 36.111111111111114)
......1,2 (c = 11.11111111111111)
......1,1,2 (c = 23.61111111111111)
....1,1,1,3 (c = 47.22222222222222)
......1,3 (c = 22.22222222222222)
......1,1,3 (c = 34.72222222222222)
..1,1 (c = 0)
..1,1,1 (c = 12.5)
..1,4 (c = 33.33333333333333)
....1,2 (c = 11.11111111111111)
....1,3 (c = 22.22222222222222)
..1,1,4 (c = 45.83333333333333)
....1,1,2 (c = 23.61111111111111)
......1,2 (c = 11.11111111111111)
....1,1,3 (c = 34.72222222222222)
......1,3 (c = 22.22222222222222)
..4,1 (c = 33.33333333333333)
....2,1 (c = 11.11111111111111)
......1,2 (c = 11.11111111111111)
....3,1 (c = 22.22222222222222)
......1,3 (c = 22.22222222222222)
..4,1,1 (c = 45.83333333333333)
....2,1,1 (c = 23.61111111111111)
......1,1,2 (c = 23.61111111111111)
........1,2 (c = 11.11111111111111)
......1,2 (c = 11.11111111111111)
......2,1 (c = 11.11111111111111)
....3,1,1 (c = 34.72222222222222)
......1,1,3 (c = 34.72222222222222)
........1,3 (c = 22.22222222222222)
......1,3 (c = 22.22222222222222)
......3,1 (c = 22.22222222222222)
..1,1,1,1 (c = 25)
..2,1,1,1 (c = 36.111111111111114)
....1,1,1,2 (c = 36.111111111111114)
......1,2 (c = 11.11111111111111)
......1,1,2 (c = 23.61111111111111)
....1,2 (c = 11.11111111111111)
....1,1,2 (c = 23.61111111111111)
....2,1 (c = 11.11111111111111)
....2,1,1 (c = 23.61111111111111)
..3,1,1,1 (c = 47.22222222222222)
....1,1,1,3 (c = 47.22222222222222)
......1,3 (c = 22.22222222222222)
......1,1,3 (c = 34.72222222222222)
....1,3 (c = 22.22222222222222)
....1,1,3 (c = 34.72222222222222)
....3,1 (c = 22.22222222222222)
....3,1,1 (c = 34.72222222222222)"
`;

exports[`sample trees (ofMinLength(2)): 4 1`] = `
"2,4 (c = 44.44444444444444)
..1,4 (c = 33.33333333333333)
....1,1 (c = 0)
....1,2 (c = 11.11111111111111)
....1,3 (c = 22.22222222222222)
..2,1 (c = 11.11111111111111)
....1,2 (c = 11.11111111111111)
......1,1 (c = 0)
....1,1 (c = 0)
..2,2 (c = 22.22222222222222)
....1,2 (c = 11.11111111111111)
..2,3 (c = 33.33333333333333)
....1,3 (c = 22.22222222222222)"
`;

exports[`sample trees (ofMinLength(2)): 5 1`] = `
"2,4,1,2,1,2 (c = 116.66666666666667)
..1,1,2,2,2,4 (c = 116.66666666666667)
....1,1 (c = 0)
....1,1,2,2 (c = 47.22222222222223)
......1,1,2 (c = 23.61111111111111)
........1,2 (c = 11.11111111111111)
........1,1,1 (c = 12.5)
......1,2 (c = 11.11111111111111)
......2,2 (c = 22.22222222222222)
........2,1 (c = 11.11111111111111)
......1,2,2 (c = 34.72222222222222)
........1,2,1 (c = 23.61111111111111)
..........2,1 (c = 11.11111111111111)
..........1,1,1 (c = 12.5)
......1,1,1,2 (c = 36.111111111111114)
........1,1,1 (c = 12.5)
........1,1,1,1 (c = 25)
......1,1,2,1 (c = 36.111111111111114)
........1,1,1 (c = 12.5)
........2,1 (c = 11.11111111111111)
........1,2,1 (c = 23.61111111111111)
........1,1,1,1 (c = 25)
....1,1,2,2,2 (c = 70.83333333333334)
......1,1,2 (c = 23.61111111111111)
........1,2 (c = 11.11111111111111)
........1,1,1 (c = 12.5)
......1,2 (c = 11.11111111111111)
......2,2 (c = 22.22222222222222)
........2,1 (c = 11.11111111111111)
......1,2,2 (c = 34.72222222222222)
........1,2,1 (c = 23.61111111111111)
..........2,1 (c = 11.11111111111111)
..........1,1,1 (c = 12.5)
......2,2,2 (c = 45.83333333333333)
........2,1,2 (c = 34.72222222222222)
..........2,1 (c = 11.11111111111111)
..........2,1,1 (c = 23.61111111111111)
............1,1,1 (c = 12.5)
........2,2,1 (c = 34.72222222222222)
..........2,1 (c = 11.11111111111111)
..........1,2,1 (c = 23.61111111111111)
............1,1,1 (c = 12.5)
..........2,1,1 (c = 23.61111111111111)
............1,1,1 (c = 12.5)
......1,2,2,2 (c = 58.33333333333334)
........1,2,1,2 (c = 47.22222222222223)
..........1,2,1 (c = 23.61111111111111)
............2,1 (c = 11.11111111111111)
............1,1,1 (c = 12.5)
..........2,1 (c = 11.11111111111111)
..........2,1,2 (c = 34.72222222222222)
............2,1,1 (c = 23.61111111111111)
..............1,1,1 (c = 12.5)
..........1,1,1,2 (c = 36.111111111111114)
............1,1,1 (c = 12.5)
............1,1,1,1 (c = 25)
..........1,2,1,1 (c = 36.111111111111114)
............1,1,1 (c = 12.5)
............2,1,1 (c = 23.61111111111111)
............1,1,1,1 (c = 25)
........1,2,2,1 (c = 47.22222222222223)
..........2,1 (c = 11.11111111111111)
..........1,2,1 (c = 23.61111111111111)
............1,1,1 (c = 12.5)
..........2,2,1 (c = 34.72222222222222)
............2,1,1 (c = 23.61111111111111)
..............1,1,1 (c = 12.5)
..........1,1,2,1 (c = 36.111111111111114)
............1,1,1,2 (c = 36.111111111111114)
..............1,1,1 (c = 12.5)
..............1,1,1,1 (c = 25)
............1,1,1 (c = 12.5)
............1,1,1,1 (c = 25)
..........1,2,1,1 (c = 36.111111111111114)
............1,1,1,2 (c = 36.111111111111114)
..............1,1,1 (c = 12.5)
..............1,1,1,1 (c = 25)
............1,1,1 (c = 12.5)
............2,1,1 (c = 23.61111111111111)
............1,1,1,1 (c = 25)
......1,1,1,2,2 (c = 59.72222222222223)
........1,1,1 (c = 12.5)
........1,1,1,2 (c = 36.111111111111114)
..........1,1,1,1 (c = 25)
........1,1,1,1,2 (c = 48.611111111111114)
..........1,1,1,1 (c = 25)
..........1,1,1,1,1 (c = 37.5)
........1,1,1,2,1 (c = 48.611111111111114)
..........1,1,1,1 (c = 25)
..........2,1 (c = 11.11111111111111)
..........1,2,1 (c = 23.61111111111111)
..........1,1,2,1 (c = 36.111111111111114)
..........1,1,1,1,1 (c = 37.5)
......1,1,2,1,2 (c = 59.72222222222223)
........1,1,1 (c = 12.5)
........1,1,1,2 (c = 36.111111111111114)
..........1,1,1,1 (c = 25)
........1,1,2,1 (c = 36.111111111111114)
..........2,1 (c = 11.11111111111111)
..........1,2,1 (c = 23.61111111111111)"
`;

exports[`sample trees (ofMinLength(2)): 6 1`] = `
"2,3,5,1 (c = 102.77777777777777)
..1,2,3,5 (c = 102.77777777777777)
....1,2 (c = 11.11111111111111)
......1,1 (c = 0)
....1,2,3 (c = 45.83333333333333)
......1,3 (c = 22.22222222222222)
........1,1 (c = 0)
......2,3 (c = 33.33333333333333)
........2,1 (c = 11.11111111111111)
..........1,1 (c = 0)
........2,2 (c = 22.22222222222222)
......1,1,3 (c = 34.72222222222222)
........1,1 (c = 0)
........1,1,1 (c = 12.5)
........1,1,2 (c = 23.61111111111111)
......1,2,1 (c = 23.61111111111111)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,1,1 (c = 12.5)
........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
........1,1,1 (c = 12.5)
......1,2,2 (c = 34.72222222222222)
........2,2 (c = 22.22222222222222)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
....1,3 (c = 22.22222222222222)
......1,1 (c = 0)
....1,5 (c = 44.44444444444444)
......1,1 (c = 0)
......1,4 (c = 33.33333333333333)
....2,3 (c = 33.33333333333333)
......2,1 (c = 11.11111111111111)
........1,1 (c = 0)
......2,2 (c = 22.22222222222222)
....2,5 (c = 55.55555555555556)
......2,1 (c = 11.11111111111111)
........1,1 (c = 0)
......2,4 (c = 44.44444444444444)
........1,4 (c = 33.33333333333333)
........2,2 (c = 22.22222222222222)
....3,5 (c = 66.66666666666666)
......3,1 (c = 22.22222222222222)
........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
......3,3 (c = 44.44444444444444)
........3,2 (c = 33.33333333333333)
..........2,2 (c = 22.22222222222222)
......3,4 (c = 55.55555555555555)
........1,4 (c = 33.33333333333333)
........2,4 (c = 44.44444444444444)
..........2,2 (c = 22.22222222222222)
........3,2 (c = 33.33333333333333)
..........2,2 (c = 22.22222222222222)
....1,2,5 (c = 68.05555555555556)
......1,1,5 (c = 56.94444444444444)
........1,1 (c = 0)
........1,1,1 (c = 12.5)
........1,1,3 (c = 34.72222222222222)
..........1,1,2 (c = 23.61111111111111)
........1,1,4 (c = 45.83333333333333)
..........1,4 (c = 33.33333333333333)
..........1,1,2 (c = 23.61111111111111)
......1,2,1 (c = 23.61111111111111)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,1,1 (c = 12.5)
........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
........1,1,1 (c = 12.5)
......1,2,4 (c = 56.94444444444444)
........1,4 (c = 33.33333333333333)
........2,4 (c = 44.44444444444444)
..........2,2 (c = 22.22222222222222)
........1,1,4 (c = 45.83333333333333)
..........1,1 (c = 0)
..........1,1,2 (c = 23.61111111111111)
........1,2,2 (c = 34.72222222222222)
..........2,2 (c = 22.22222222222222)
..........1,1,2 (c = 23.61111111111111)
............1,1 (c = 0)
....1,3,5 (c = 79.16666666666666)
......1,1,5 (c = 56.94444444444444)
........1,1 (c = 0)
........1,1,1 (c = 12.5)
........1,1,3 (c = 34.72222222222222)
..........1,1,2 (c = 23.61111111111111)
........1,1,4 (c = 45.83333333333333)
..........1,4 (c = 33.33333333333333)
..........1,1,2 (c = 23.61111111111111)
......1,3,1 (c = 34.72222222222222)
........1,1,3 (c = 34.72222222222222)
..........1,1 (c = 0)
..........1,1,1 (c = 12.5)
..........1,1,2 (c = 23.61111111111111)
........1,1 (c = 0)
........3,1 (c = 22.22222222222222)
..........2,1 (c = 11.11111111111111)
........1,1,1 (c = 12.5)
........1,2,1 (c = 23.61111111111111)"
`;

exports[`sample trees (ofMinLength(2)): 7 1`] = `
"1,2,1,1,4,1 (c = 94.44444444444444)
..1,1,1,1,2,4 (c = 94.44444444444444)
....1,1 (c = 0)
....1,1,1,1 (c = 25)
......1,1,1 (c = 12.5)
....1,1,1,1,2 (c = 48.611111111111114)
......1,1,1 (c = 12.5)
......1,2 (c = 11.11111111111111)
......1,1,2 (c = 23.61111111111111)
......1,1,1,2 (c = 36.111111111111114)
......1,1,1,1,1 (c = 37.5)
....1,2 (c = 11.11111111111111)
....1,4 (c = 33.33333333333333)
......1,3 (c = 22.22222222222222)
....2,4 (c = 44.44444444444444)
......2,1 (c = 11.11111111111111)
......2,2 (c = 22.22222222222222)
......2,3 (c = 33.33333333333333)
........1,3 (c = 22.22222222222222)
....1,1,1,2 (c = 36.111111111111114)
......1,1,1 (c = 12.5)
......1,1,2 (c = 23.61111111111111)
....1,1,1,4 (c = 58.33333333333333)
......1,1,1 (c = 12.5)
......1,1,4 (c = 45.83333333333333)
........1,1,2 (c = 23.61111111111111)
........1,1,3 (c = 34.72222222222222)
..........1,3 (c = 22.22222222222222)
......1,1,1,3 (c = 47.22222222222222)
........1,3 (c = 22.22222222222222)
........1,1,3 (c = 34.72222222222222)
....1,1,2,4 (c = 69.44444444444444)
......1,1,2 (c = 23.61111111111111)
........1,1,1 (c = 12.5)
......1,1,4 (c = 45.83333333333333)
........1,1,1 (c = 12.5)
........1,1,3 (c = 34.72222222222222)
..........1,3 (c = 22.22222222222222)
......1,2,4 (c = 56.94444444444444)
........1,2,1 (c = 23.61111111111111)
..........2,1 (c = 11.11111111111111)
..........1,1,1 (c = 12.5)
........1,2,2 (c = 34.72222222222222)
..........2,2 (c = 22.22222222222222)
........1,2,3 (c = 45.83333333333333)
..........1,3 (c = 22.22222222222222)
..........2,3 (c = 33.33333333333333)
..........1,1,3 (c = 34.72222222222222)
......1,1,2,1 (c = 36.111111111111114)
........1,1,1 (c = 12.5)
........2,1 (c = 11.11111111111111)
........1,2,1 (c = 23.61111111111111)
......1,1,2,2 (c = 47.22222222222223)
........2,2 (c = 22.22222222222222)
........1,2,2 (c = 34.72222222222222)
......1,1,2,3 (c = 58.333333333333336)
........1,3 (c = 22.22222222222222)
........2,3 (c = 33.33333333333333)
........1,1,3 (c = 34.72222222222222)
........1,2,3 (c = 45.83333333333333)
........1,1,1,3 (c = 47.22222222222222)
..........1,1,1 (c = 12.5)
....1,1,1,1,4 (c = 70.83333333333333)
......1,1,1 (c = 12.5)
......1,1,4 (c = 45.83333333333333)
........1,1,2 (c = 23.61111111111111)
........1,1,3 (c = 34.72222222222222)
..........1,3 (c = 22.22222222222222)
......1,1,1,1,1 (c = 37.5)
......1,1,1,1,3 (c = 59.72222222222222)
........1,3 (c = 22.22222222222222)
........1,1,3 (c = 34.72222222222222)
........1,1,1,3 (c = 47.22222222222222)
....1,1,1,2,4 (c = 81.94444444444444)
......1,1,1 (c = 12.5)
......1,1,2 (c = 23.61111111111111)
......1,1,4 (c = 45.83333333333333)
........1,1,3 (c = 34.72222222222222)
..........1,3 (c = 22.22222222222222)
......1,2,4 (c = 56.94444444444444)
........1,2,1 (c = 23.61111111111111)
..........2,1 (c = 11.11111111111111)
........1,2,2 (c = 34.72222222222222)
..........2,2 (c = 22.22222222222222)
........1,2,3 (c = 45.83333333333333)
..........1,3 (c = 22.22222222222222)
..........2,3 (c = 33.33333333333333)
..........1,1,3 (c = 34.72222222222222)
......1,1,1,2,1 (c = 48.611111111111114)
........2,1 (c = 11.11111111111111)
........1,2,1 (c = 23.61111111111111)
........1,1,2,1 (c = 36.111111111111114)
........1,1,1,1,1 (c = 37.5)
......1,1,1,2,2 (c = 59.72222222222223)
........2,2 (c = 22.22222222222222)
........1,2,2 (c = 34.72222222222222)
........1,1,2,2 (c = 47.22222222222223)
......1,1,1,2,3 (c = 70.83333333333334)
........1,3 (c = 22.22222222222222)
........2,3 (c = 33.33333333333333)"
`;

exports[`sample trees (ofMinLength(2)): 8 1`] = `
"8,1,1,5,1,6 (c = 227.77777777777777)
..1,1,1,5,6,8 (c = 227.77777777777777)
....1,1 (c = 0)
....1,1,1,5 (c = 69.44444444444444)
......1,1,1 (c = 12.5)
......1,5 (c = 44.44444444444444)
........1,3 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
........1,4 (c = 33.33333333333333)
..........1,2 (c = 11.11111111111111)
......1,1,5 (c = 56.94444444444444)
........1,1,3 (c = 34.72222222222222)
..........1,3 (c = 22.22222222222222)
............1,2 (c = 11.11111111111111)
..........1,1,2 (c = 23.61111111111111)
............1,2 (c = 11.11111111111111)
........1,1,4 (c = 45.83333333333333)
..........1,4 (c = 33.33333333333333)
............1,2 (c = 11.11111111111111)
..........1,1,2 (c = 23.61111111111111)
............1,2 (c = 11.11111111111111)
......1,1,1,1 (c = 25)
......1,1,1,3 (c = 47.22222222222222)
........1,3 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
........1,1,3 (c = 34.72222222222222)
..........1,1,2 (c = 23.61111111111111)
............1,2 (c = 11.11111111111111)
........1,1,1,2 (c = 36.111111111111114)
..........1,2 (c = 11.11111111111111)
..........1,1,2 (c = 23.61111111111111)
......1,1,1,4 (c = 58.33333333333333)
........1,4 (c = 33.33333333333333)
..........1,2 (c = 11.11111111111111)
........1,1,4 (c = 45.83333333333333)
..........1,1,2 (c = 23.61111111111111)
............1,2 (c = 11.11111111111111)
........1,1,1,2 (c = 36.111111111111114)
..........1,2 (c = 11.11111111111111)
..........1,1,2 (c = 23.61111111111111)
....1,1,1,5,6 (c = 137.5)
......1,1,1 (c = 12.5)
......1,5 (c = 44.44444444444444)
........1,3 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
........1,4 (c = 33.33333333333333)
..........1,2 (c = 11.11111111111111)
......1,6 (c = 55.55555555555556)
........1,3 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
........1,4 (c = 33.33333333333333)
..........1,2 (c = 11.11111111111111)
......5,6 (c = 100)
........3,6 (c = 77.77777777777777)
..........2,6 (c = 66.66666666666667)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
............2,3 (c = 33.33333333333333)
..............2,2 (c = 22.22222222222222)
............2,4 (c = 44.44444444444444)
..............2,2 (c = 22.22222222222222)
............2,5 (c = 55.55555555555556)
..........3,1 (c = 22.22222222222222)
............1,3 (c = 22.22222222222222)
..............1,2 (c = 11.11111111111111)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
..........3,3 (c = 44.44444444444444)
............2,3 (c = 33.33333333333333)
..............2,2 (c = 22.22222222222222)
............3,2 (c = 33.33333333333333)
..............2,2 (c = 22.22222222222222)
..........3,4 (c = 55.55555555555555)
............2,4 (c = 44.44444444444444)
..............2,2 (c = 22.22222222222222)
............3,2 (c = 33.33333333333333)
..............2,3 (c = 33.33333333333333)
................2,2 (c = 22.22222222222222)
..............2,2 (c = 22.22222222222222)
..........3,5 (c = 66.66666666666666)
............2,5 (c = 55.55555555555556)
........4,6 (c = 88.88888888888889)
..........2,6 (c = 66.66666666666667)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
............2,3 (c = 33.33333333333333)
..............2,2 (c = 22.22222222222222)
............2,4 (c = 44.44444444444444)
..............2,2 (c = 22.22222222222222)
............2,5 (c = 55.55555555555556)
..........4,1 (c = 33.33333333333333)
............1,4 (c = 33.33333333333333)
..............1,2 (c = 11.11111111111111)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
..........4,3 (c = 55.55555555555555)
............3,4 (c = 55.55555555555555)
..............2,4 (c = 44.44444444444444)
................2,2 (c = 22.22222222222222)
..............3,2 (c = 33.33333333333333)"
`;

exports[`sample trees (ofMinLength(2)): 9 1`] = `
"8,9,5,7,9,4 (c = 449.99999999999994)
..4,5,7,8,9,9 (c = 450)
....4,5 (c = 77.77777777777777)
......1,5 (c = 44.44444444444444)
........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
........1,4 (c = 33.33333333333333)
..........1,2 (c = 11.11111111111111)
......2,5 (c = 55.55555555555556)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
........2,3 (c = 33.33333333333333)
..........2,2 (c = 22.22222222222222)
........2,4 (c = 44.44444444444444)
..........2,2 (c = 22.22222222222222)
......3,5 (c = 66.66666666666666)
........3,1 (c = 22.22222222222222)
..........1,3 (c = 22.22222222222222)
........3,3 (c = 44.44444444444444)
..........3,2 (c = 33.33333333333333)
............2,3 (c = 33.33333333333333)
........3,4 (c = 55.55555555555555)
..........3,2 (c = 33.33333333333333)
............2,3 (c = 33.33333333333333)
......4,1 (c = 33.33333333333333)
........1,4 (c = 33.33333333333333)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
..........1,3 (c = 22.22222222222222)
........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
........3,1 (c = 22.22222222222222)
..........1,3 (c = 22.22222222222222)
......4,3 (c = 55.55555555555555)
........3,4 (c = 55.55555555555555)
..........2,4 (c = 44.44444444444444)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
............2,2 (c = 22.22222222222222)
............2,3 (c = 33.33333333333333)
..........3,1 (c = 22.22222222222222)
............1,3 (c = 22.22222222222222)
..............1,2 (c = 11.11111111111111)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
..........3,2 (c = 33.33333333333333)
............2,3 (c = 33.33333333333333)
..............2,2 (c = 22.22222222222222)
............2,2 (c = 22.22222222222222)
..........3,3 (c = 44.44444444444444)
............2,3 (c = 33.33333333333333)
........1,3 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
........2,3 (c = 33.33333333333333)
..........2,2 (c = 22.22222222222222)
........3,3 (c = 44.44444444444444)
..........3,2 (c = 33.33333333333333)
........4,2 (c = 44.44444444444444)
..........2,4 (c = 44.44444444444444)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
............2,2 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
..........2,2 (c = 22.22222222222222)
..........3,2 (c = 33.33333333333333)
......4,4 (c = 66.66666666666666)
........1,4 (c = 33.33333333333333)
..........1,2 (c = 11.11111111111111)
........2,4 (c = 44.44444444444444)
..........2,2 (c = 22.22222222222222)
........3,4 (c = 55.55555555555555)
..........3,2 (c = 33.33333333333333)
............2,3 (c = 33.33333333333333)
........4,2 (c = 44.44444444444444)
..........1,2 (c = 11.11111111111111)
..........2,2 (c = 22.22222222222222)
..........3,2 (c = 33.33333333333333)
............2,3 (c = 33.33333333333333)
....4,5,7,8 (c = 247.2222222222222)
......4,5,7 (c = 156.94444444444443)
........4,7 (c = 99.99999999999999)
..........1,7 (c = 66.66666666666666)
............1,1 (c = 0)
............1,4 (c = 33.33333333333333)
..............1,2 (c = 11.11111111111111)
..............1,3 (c = 22.22222222222222)
............1,5 (c = 44.44444444444444)
..............1,3 (c = 22.22222222222222)
................1,2 (c = 11.11111111111111)
............1,6 (c = 55.55555555555556)
..............1,3 (c = 22.22222222222222)
................1,2 (c = 11.11111111111111)
..........2,7 (c = 77.77777777777777)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
............2,4 (c = 44.44444444444444)
..............2,2 (c = 22.22222222222222)
..............2,3 (c = 33.33333333333333)"
`;

exports[`sample trees (ofMinLength(2)): 10 1`] = `
"2,9,1,7,1,2,7,7,7,7 (c = 544.4444444444442)
..1,1,2,2,7,7,7,7,7,9 (c = 544.4444444444443)
....1,1 (c = 0)
....1,1,2,2,7,7 (c = 205.55555555555554)
......1,1,2,2 (c = 47.22222222222223)
........1,1,2 (c = 23.61111111111111)
..........1,2 (c = 11.11111111111111)
..........1,1,1 (c = 12.5)
........1,2 (c = 11.11111111111111)
........2,2 (c = 22.22222222222222)
..........2,1 (c = 11.11111111111111)
........1,2,2 (c = 34.72222222222222)
..........1,2,1 (c = 23.61111111111111)
............2,1 (c = 11.11111111111111)
............1,1,1 (c = 12.5)
........1,1,1,2 (c = 36.111111111111114)
..........1,1,1 (c = 12.5)
..........1,1,1,1 (c = 25)
........1,1,2,1 (c = 36.111111111111114)
..........1,1,1 (c = 12.5)
..........2,1 (c = 11.11111111111111)
..........1,2,1 (c = 23.61111111111111)
..........1,1,1,1 (c = 25)
......1,1,2,2,7 (c = 126.38888888888889)
........1,1,2 (c = 23.61111111111111)
..........1,2 (c = 11.11111111111111)
..........1,1,1 (c = 12.5)
........1,2 (c = 11.11111111111111)
........1,7 (c = 66.66666666666666)
..........1,4 (c = 33.33333333333333)
............1,3 (c = 22.22222222222222)
..........1,5 (c = 44.44444444444444)
............1,3 (c = 22.22222222222222)
..........1,6 (c = 55.55555555555556)
............1,3 (c = 22.22222222222222)
........2,2 (c = 22.22222222222222)
..........2,1 (c = 11.11111111111111)
........2,7 (c = 77.77777777777777)
..........2,1 (c = 11.11111111111111)
..........2,4 (c = 44.44444444444444)
............1,4 (c = 33.33333333333333)
..............1,3 (c = 22.22222222222222)
............2,3 (c = 33.33333333333333)
..............1,3 (c = 22.22222222222222)
..........2,5 (c = 55.55555555555556)
............1,5 (c = 44.44444444444444)
..............1,3 (c = 22.22222222222222)
............2,3 (c = 33.33333333333333)
..............1,3 (c = 22.22222222222222)
..........2,6 (c = 66.66666666666667)
............1,6 (c = 55.55555555555556)
..............1,3 (c = 22.22222222222222)
............2,3 (c = 33.33333333333333)
..............1,3 (c = 22.22222222222222)
........1,1,7 (c = 79.16666666666666)
..........1,1,1 (c = 12.5)
..........1,1,4 (c = 45.83333333333333)
............1,4 (c = 33.33333333333333)
..............1,3 (c = 22.22222222222222)
............1,1,3 (c = 34.72222222222222)
..............1,3 (c = 22.22222222222222)
..........1,1,5 (c = 56.94444444444444)
............1,5 (c = 44.44444444444444)
..............1,3 (c = 22.22222222222222)
............1,1,3 (c = 34.72222222222222)
..............1,3 (c = 22.22222222222222)
..........1,1,6 (c = 68.05555555555556)
............1,6 (c = 55.55555555555556)
..............1,3 (c = 22.22222222222222)
............1,1,3 (c = 34.72222222222222)
..............1,3 (c = 22.22222222222222)
........1,2,2 (c = 34.72222222222222)
..........1,2,1 (c = 23.61111111111111)
............2,1 (c = 11.11111111111111)
............1,1,1 (c = 12.5)
........1,2,7 (c = 90.27777777777777)
..........1,2,1 (c = 23.61111111111111)
............2,1 (c = 11.11111111111111)
............1,1,1 (c = 12.5)
..........1,2,4 (c = 56.94444444444444)
............1,4 (c = 33.33333333333333)
..............1,3 (c = 22.22222222222222)
............2,4 (c = 44.44444444444444)
..............2,3 (c = 33.33333333333333)
................1,3 (c = 22.22222222222222)
............1,1,4 (c = 45.83333333333333)
..............1,1,3 (c = 34.72222222222222)
................1,3 (c = 22.22222222222222)
............1,2,3 (c = 45.83333333333333)
..............1,3 (c = 22.22222222222222)
..............2,3 (c = 33.33333333333333)
..............1,1,3 (c = 34.72222222222222)
..........1,2,5 (c = 68.05555555555556)
............1,5 (c = 44.44444444444444)
..............1,3 (c = 22.22222222222222)
............2,5 (c = 55.55555555555556)
..............2,3 (c = 33.33333333333333)
................1,3 (c = 22.22222222222222)
............1,1,5 (c = 56.94444444444444)
..............1,1,3 (c = 34.72222222222222)"
`;

exports[`sample values: 1 1`] = `
Array [
  Array [],
  Array [
    0,
  ],
  Array [],
  Array [],
  Array [],
  Array [
    0,
  ],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`sample values: 2 1`] = `
Array [
  Array [
    1,
    2,
  ],
  Array [
    0,
  ],
  Array [
    0,
    2,
  ],
  Array [],
  Array [
    1,
    1,
  ],
  Array [
    0,
  ],
  Array [],
  Array [
    2,
  ],
  Array [
    2,
  ],
  Array [
    2,
    2,
  ],
]
`;

exports[`sample values: 3 1`] = `
Array [
  Array [],
  Array [
    0,
    0,
    0,
  ],
  Array [],
  Array [
    0,
  ],
  Array [],
  Array [
    0,
    0,
  ],
  Array [
    1,
    0,
    0,
  ],
  Array [],
  Array [],
  Array [
    2,
  ],
]
`;

exports[`sample values: 4 1`] = `
Array [
  Array [
    1,
    3,
    0,
    1,
  ],
  Array [],
  Array [
    1,
  ],
  Array [
    1,
  ],
  Array [
    1,
  ],
  Array [
    2,
    4,
  ],
  Array [
    4,
    1,
    1,
  ],
  Array [],
  Array [
    4,
  ],
  Array [
    3,
    4,
  ],
]
`;

exports[`sample values: 5 1`] = `
Array [
  Array [
    1,
    2,
  ],
  Array [
    0,
    2,
    3,
    2,
  ],
  Array [],
  Array [
    4,
    4,
  ],
  Array [
    3,
  ],
  Array [],
  Array [
    2,
    4,
    5,
    2,
  ],
  Array [
    2,
    1,
    2,
    3,
    5,
  ],
  Array [
    4,
    3,
    1,
    3,
  ],
  Array [
    3,
    0,
    5,
  ],
]
`;

exports[`sample values: 6 1`] = `
Array [
  Array [
    0,
    1,
    0,
    0,
  ],
  Array [
    0,
    4,
    1,
  ],
  Array [
    5,
  ],
  Array [
    1,
    1,
  ],
  Array [
    1,
    1,
    4,
    5,
    5,
  ],
  Array [
    3,
  ],
  Array [
    6,
    0,
    2,
    0,
    3,
  ],
  Array [
    0,
    0,
  ],
  Array [
    6,
    5,
    5,
    3,
    6,
    6,
  ],
  Array [
    2,
    1,
    2,
  ],
]
`;

exports[`sample values: 7 1`] = `
Array [
  Array [
    7,
    0,
    0,
    4,
  ],
  Array [],
  Array [
    0,
    0,
    2,
    0,
    4,
  ],
  Array [
    1,
    4,
    0,
  ],
  Array [
    4,
    5,
    2,
    5,
  ],
  Array [
    1,
    0,
    3,
    5,
  ],
  Array [],
  Array [
    1,
    3,
    3,
    1,
  ],
  Array [
    4,
  ],
  Array [
    3,
  ],
]
`;

exports[`sample values: 8 1`] = `
Array [
  Array [
    7,
    8,
    4,
    6,
    8,
    3,
    8,
    6,
  ],
  Array [
    7,
    1,
    4,
    3,
    0,
    7,
    2,
    4,
  ],
  Array [
    8,
    2,
    8,
    1,
    5,
  ],
  Array [
    2,
    7,
    1,
    6,
    7,
    3,
  ],
  Array [
    0,
    3,
    2,
  ],
  Array [
    5,
    6,
  ],
  Array [
    6,
    7,
    6,
    6,
  ],
  Array [
    5,
    3,
    3,
    2,
    5,
  ],
  Array [
    8,
  ],
  Array [
    0,
    7,
  ],
]
`;

exports[`sample values: 9 1`] = `
Array [
  Array [
    1,
    8,
    0,
    6,
  ],
  Array [],
  Array [
    6,
  ],
  Array [
    6,
    6,
    6,
    7,
    7,
    4,
  ],
  Array [
    4,
    6,
    1,
    0,
    1,
    4,
    7,
    8,
  ],
  Array [
    5,
    4,
    4,
    5,
    5,
    7,
    5,
    5,
    8,
  ],
  Array [
    3,
    2,
    1,
    1,
    6,
  ],
  Array [
    4,
    6,
    2,
    7,
    7,
    8,
    4,
    4,
  ],
  Array [
    6,
    4,
    7,
    7,
  ],
  Array [
    1,
    2,
    0,
    6,
  ],
]
`;

exports[`sample values: 10 1`] = `
Array [
  Array [
    5,
    9,
    4,
    6,
    4,
    1,
    4,
    9,
    1,
    5,
  ],
  Array [
    6,
    1,
    7,
    6,
    5,
    9,
  ],
  Array [
    8,
    1,
    0,
    7,
    6,
    8,
  ],
  Array [
    0,
    4,
    0,
    0,
    2,
  ],
  Array [
    6,
    10,
  ],
  Array [
    1,
    3,
    7,
    8,
    6,
    3,
    3,
    2,
  ],
  Array [
    5,
    10,
  ],
  Array [
    6,
    0,
    1,
    1,
    1,
    6,
    10,
    8,
    7,
  ],
  Array [
    0,
    8,
    1,
  ],
  Array [
    7,
    3,
    7,
    0,
    4,
    1,
    5,
    8,
    4,
    2,
  ],
]
`;
